--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
-#map { height: calc(100% - 55px); width: 100%; padding: 0px; }
+#map { height: calc(100% - 3.5rem); width: 100%; padding: 0px; } /* navbar is 3.5rem */
 #app { padding: 0px; overflow-x: hidden; }
 
 
 /* navbar stuff */
 #navbar-container { padding: 0px; }
-.navbar { padding-left: 20px; height: 55px; }
+.navbar { padding-left: 20px; }
 .navbar-brand small { font-size: 12px; }
 
 #info-panel {
@@ -18,7 +18,7 @@
 
 /* for x-small devices (col-xx) */
 @media (max-width: 575.98px) {
-	#map { height: calc(100% - 60px - 200px); }
+	#map { height: calc(100% - 3.5rem - 200px); /* navbar is 3.5rem */ }
 	#info-panel { margin-left: 15px; }
 
 }
